--- a/scoe/scoe.vcxproj
+++ b/scoe/scoe.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.c" />
+    <ClCompile Include="sortingmethods.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sorting.h" />
